# Local-Law-Update-Tracker

./: .gitignore  API_KEY_REGISTRATION_GUIDE.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-HEADER.txt  LICENSE-OVERVIEW.md  LLUT_SH_GUIDE.md  Makefile  QUICKSTART.md  README.md  SCRIPTS_GUIDE.md  TAURI_SETUP.md  llut.bat  llut.sh  run.bat  start-frontend.bat  start-frontend.sh  stop-frontend.bat  stop-frontend.sh
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: llut-backend-x86_64-apple-darwin  llut-backend-x86_64-pc-windows-msvc.bat  llut-backend-x86_64-unknown-linux-gnu
backend/: check_db.py  requirements-minimal.txt  requirements.txt  test_connectors.py  test_json_structure.py  test_migration.py  test_parsers.py  test_sync.py  test_uploads_connector.py
backend/app/: __init__.py  config.py  db.py  diff_engine.py  jobs.py  main.py  search.py  settings.py  summary_engine.py
backend/app/analysis/: __init__.py  citations.py  policy_analyzer.py
backend/app/connectors/: __init__.py  base.py  congress_gov.py  federal_register.py  govinfo.py  scotus.py  user_uploads.py
backend/app/migrations/: 003_user_uploads.sql
backend/app/routers/: sync.py  (+7 more)
backend/app_data/: llut.db  settings.json
backend/tests/: __init__.py  test_citations.py  test_db.py  test_parsers.py
scripts/: README.md  build_desktop.sh  build_sidecar.py  cleanup.sh  dev_run.sh  reset_db.sh  run_backend.bat  run_backend.sh  start_app.sh  stop_all.sh
(+21 files in other folders)
