[package]
name = "llut"
version = "0.1.0"
description = "Local Law Update Tracker"
authors = ["Sekacorn"]
license = "Apache-2.0"
repository = "https://github.com/sekacorn/Local-Law-Update-Tracker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "fs-remove-file", "fs-remove-dir", "fs-read-dir", "shell-sidecar", "http-all", "fs-create-dir", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
